<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_next_image_detection_filter"
        app:showAsAction="ifRoom|withText"
        android:title="@string/menu_next_image_detection_filter" />
    <item
        android:id="@+id/menu_next_curve_filter"
        app:showAsAction="ifRoom|withText"
        android:title="@string/menu_next_curve_filter" />
    <item
        android:id="@+id/menu_next_mixer_filter"
        app:showAsAction="ifRoom|withText"
        android:title="@string/menu_next_mixer_filter" />
    <item
        android:id="@+id/menu_next_convolution_filter"
        app:showAsAction="ifRoom|withText"
        android:title="@string/menu_next_convolution_filter" />
    <item
        android:id="@+id/menu_next_camera"
        app:showAsAction="ifRoom|withText"
        android:title="@string/menu_next_camera" />
    <item
        android:id="@+id/menu_take_photo"
        app:showAsAction="always|withText"
        android:title="@string/menu_take_photo" />
</menu>